overlays/develop/genkohoshu-01/c/web1/web1-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web1
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
