overlays/develop/genkohoshu-01/c/web1/web1-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: web1
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
